# relation-lm

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
assets/relationlex-16k-v1/: README.md  boundary_vocab.json  tokenizer.json
benchmarks/: README.md  benchmark_packed_cache.py  benchmark_relation_reduce.py  benchmark_relation_select.py  benchmark_router_cache_update.py
benchmarks/results/: benchmark_512_median.json  distance_quota_relation_500step.json  packed_cache_benchmark_512_multisample.json  packed_cache_compiled_parity.json  packed_cache_microbenchmark.json  paired_validation.json  partner_budget_final_confirm.json  partner_diagnostics_20m.json  partner_structure_report_20m.json  relation_reduce_benchmark_512_median.json  relation_reduce_compiled_parity.json  relation_reduce_context_parity.json  relation_select_benchmark_512_median.json  relation_select_compiled_parity.json  relation_select_microbenchmark.json  relation_select_selector_parity.json  router_cache_update_benchmark_512_multisample.json  (+5 more)
docs/: architecture.md  benchmarks.md  partner-dynamics.md  partner-structure.md  roadmap.md
examples/: tokenize.py
scripts/: factorize_text.py
tests/: test_distance_quota_blocks.py  test_model_shapes.py  test_multi_relation_blocks.py  test_packed_cache_projection.py  test_partner_dynamics.py  test_partner_structure.py  test_relation_reduce_gpu.py  test_relation_select_gpu.py  test_relationlex_roundtrip.py  test_router_cache_update_gpu.py  test_router_shapes.py
(+21 files in other folders)
